# Lua-interpreter

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.py  deps.sh  generate_latex_table.py  run.py
benchmarks/: binary-trees.lua  fib.lua  fib_iter.lua  nsieve.lua
luacompiler/: Cargo.toml  build.rs
luacompiler/src/: constants_map.rs  lib.rs  main.rs  register_map.rs
luacompiler/src/bytecode/: instructions.rs  mod.rs
luacompiler/src/lib/: constants_map.rs  errors.rs  mod.rs
luacompiler/src/lib/bytecode/: instructions.rs  mod.rs
luacompiler/src/lib/bytecodegen/: constants_map.rs  mod.rs  register_allocator.rs
luacompiler/src/lib/irgen/: basic_block.rs  compiled_func.rs  instr.rs  lua_ir.rs  mod.rs  opcodes.rs  register_map.rs  utils.rs
luacompiler/src/lua5_3/: lua5_3.l
luacompiler/tests/: fib_iter  integration_test.rs  nested_for
luacompiler/tests/bc_out/: fib
luavm/: Cargo.toml
luavm/src/: main.rs
luavm/src/lib/: errors.rs  io.lua  lua_value.rs  mod.rs  stdlib.rs
luavm/src/lib/instructions/: arithmetic_operators.rs  control.rs  functions.rs  loads.rs  mod.rs  relational_operators.rs  tables.rs  upvals.rs
luavm/src/lib/lua_std/: io.rs  string.rs
luavm/src/lib/lua_values/: gc_val.rs  lua_closure.rs  lua_obj.rs  lua_table.rs  mod.rs  tagging.rs
luavm/tests/: test.rs
luavm/tests/lua_sources/: and.lua  branching.lua  do_block.lua  fib.lua  fib_iter.lua  local_func.lua  methods.lua  nested_for.lua  nested_functions.lua  or.lua  returns.lua  simple.lua  simple_call.lua  simple_call_with_args.lua  simple_for.lua  simple_function.lua  simple_if.lua  simple_while.lua  table.lua  upvals.lua  upvals2.lua
src/: errors.rs  lib.rs  main.rs  register_map.rs
src/bytecode/: instructions.rs  mod.rs
src/interpreter/: arithmetic_operators.rs  mod.rs  register.rs
src/lua5_3/: LICENSE  README  lua5_3.y
