[package]
name = "lua_interp"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]

[dependencies]
cfgrammar = { git="https://github.com/softdevteam/grmtools" }
lrlex = { git="https://github.com/softdevteam/grmtools" }
lrpar = { git="https://github.com/softdevteam/grmtools" }
lrtable = { git="https://github.com/softdevteam/grmtools" }

[dependencies.clap]
version = "2.32"
default-features = false

[build-dependencies]
lrpar = { git="https://github.com/softdevteam/grmtools" }
lrlex = { git="https://github.com/softdevteam/grmtools" }