[package]
name = "luacompiler"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]


[[bin]]
doc = false
name = "luacompiler"

[lib]
name = "luacompiler"
path = "src/lib.rs"

[dependencies]
cfgrammar = { git="https://github.com/softdevteam/grmtools" }
lrlex = { git="https://github.com/softdevteam/grmtools" }
lrpar = { git="https://github.com/softdevteam/grmtools" }
lrtable = { git="https://github.com/softdevteam/grmtools" }
bincode = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0"

[dependencies.clap]
version = "2.32"
default-features = false

[build-dependencies]
lrpar = { git="https://github.com/softdevteam/grmtools" }
lrlex = { git="https://github.com/softdevteam/grmtools" }
