[package]
name = "luacompiler"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]


[[bin]]
doc = false
name = "luacompiler"

[lib]
name = "luacompiler"
path = "src/lib/mod.rs"

[dependencies]
cfgrammar = "0.2"
lrlex = "0.2"
lrpar = "0.2"
bincode = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0"

[dependencies.clap]
version = "2.32"
default-features = false

[build-dependencies]
cfgrammar = "0.2"
lrlex = "0.2"
lrpar = "0.2"
