[package]
name = "luavm"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]

[lib]
name = "luavm"
path = "src/lib/mod.rs"

[dependencies]
gc = { git="https://github.com/rbartlensky/rust-gc", branch="ref-eq" }
gc_derive = "0.3"
luacompiler = { path="../luacompiler" }
assert_float_eq = "1.1.3"

[dependencies.clap]
version = "2.32"
default-features = false

[dev-dependencies]
walkdir = "2"
